feature: Contact + envoie de mail avec SwiftMailer

--- a/.env
+++ b/.env
@@ -31,3 +31,11 @@ DATABASE_URL=mysql://root:''@127.0.0.1:3306/masuperagence
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+MAILER_URL=smtp://localhost:1025 # CONFIG SUR LE PORT SMTP (pour l'envoi de mail en dev) (penser à modifier le php.ini et mettre le '[mail function] : smtp_port=1025')
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+# MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
